React Components, List rendering, keys, config driven UI

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="index.css" />
 </head>
 <!-- Changing the order of files in script throws error if we put app.js before Reach dev files, we will get an error as React unknown. -->
 <!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -16,3 +17,5 @@
     
 </body>
 </html>
+
+<!-- /* Food Ordering APP*/ -->
