--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
 <body>
     <!-- If there is already something inside root with same element tag as the one we are trying to create from react js it will be replaced. Here "Hello h1" tag will be replaced -->
-    <div id="root"><div>"tell me"</div><h1>Hello h1</h1></h1></div>
+    <div id="root"></div>
     
-    <script type="module" src="./App.js"></script>
+    <script type="module" src="./src/App.js"></script>
     
 </body>
 </html>
